# Demo-Lab-Final

./: commands.txt
AbstractFactoryExample/: CMakeLists.txt
AbstractFactoryExample/src/: Button.h  Checkbox.h  GUIFactory.h  MacButton.h  MacCheckbox.h  MacFactory.h  WinButton.h  WinCheckbox.h  WinFactory.h
AbstractFactoryExample/tests/: GUIFactoryTest.cpp
AdapterExample/: CMakeLists.txt  commands.txt
AdapterExample/src/: NewPrinterInterface.h  OldPrinter.h  PrinterAdapter.h
AdapterExample/tests/: PrinterAdapterTest.cpp
CompositeExample/: CMakeLists.txt
CompositeExample/src/: Circle.h  CompositeGraphic.h  Graphic.h
CompositeExample/tests/: CompositeTest.cpp
DecoratorExample/: CMakeLists.txt
DecoratorExample/src/: Coffee.h  CoffeeDecorator.h  MilkDecorator.h  SimpleCoffee.h  SugarDecorator.h
DecoratorExample/tests/: DecoratorTest.cpp
FactoryMethodExample/: CMakeLists.txt
FactoryMethodExample/src/: Circle.h  Shape.h  ShapeFactory.h  Square.h
FactoryMethodExample/tests/: ShapeFactoryTest.cpp
SingletonExample/: CMakeLists.txt
SingletonExample/src/: Logger.cpp  Logger.h
SingletonExample/tests/: LoggerTest.cpp
